# ProceduralMeshGeneration

./: Docker.sh  DockerGuide.txt  Source.txt  guide.txt  install_cadquery.txt  proceduralmesh.ipynb  pyproject.toml
DockerFile/: Dockerfile
scripts/: sketch.py
